      of first concatenating and then \code{parse()}ing the large resulting
      file.  This allows parser or syntax errors to be diagnosed with
      correct file names and line numbers, thanks to Simon Dedman's report
      and Bill Dunlap's patch in \PR{17859}.

      This \emph{does} require syntactically self contained R source
      files now, fixing another inadvertant bug.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.2 patched}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The definition of \code{DL_FUNC} in \file{R_ext/Rdynload.h}
      has been changed to be fully C-compliant.  This means that
      functions loaded \emph{via} for example \code{R_GetCCallable} need
      to be cast to an appropriate type if they have any arguments.

      \item \code{.Machine} has a new element \code{sizeof.time_t} to
      identify old systems with a 32-bit type and hence a limited range
      of date-times (and limited support for dates millions of years
      from present).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item As \code{"POSIXlt"} objects may be \dQuote{partially filled}
      and their list components meant to be recycled, \code{length()} now
      is the length of the longest component.

      \item \code{as.POSIXlt.Date()} could underflow for dates in the
      far past (more than half a million years BCE).

      \item \code{as.Date.POSIXlt(x)} would return \code{"1970-01-01"}
      instead of \code{NA} in R 4.2.2, e.g., for \preformatted{
	x <- as.POSIXlt(c("2019-01-30","2001-1-1"))
	x$mon <- c(0L, NA); as.Date(x)}

      \item \command{R CMD check} failed to apply enabled
      \env{_R_CHECK_SUGGESTS_ONLY_} to examples and vignettes
      (regression in \R 4.2.0).

      \item \command{R CMD check} did not re-build vignettes in
      separate processes by default (regression in \R 4.2.0).

      \item Running examples from HTML documentation now restores
      previous knitr settings and options (\PR{18420}).
